# SP

./: CMakeLists.txt  client.c  client.h  config.h  main.c  server.c  server.h  table.c  table.h
SP/: CMakeLists.txt  client.c  server.c  server.h
headers/: config.h  sendRecv.h
headers/client/: client.h  comHandler.h
headers/server/: comHandler.h  server.h
headers/server/business/: table2userBusiness.h  tableBusiness.h  userBusiness.h  validateBusiness.h
headers/server/data/: genericData.h  sessionData.h  table.h  table2userData.h  tableData.h  userData.h  utilsData.h
headers/server/handlers/: commonHandler.h  tableHandler.h  userHandler.h
headers/server/models/: sessionModel.h  table2userModel.h  tableModel.h  userModel.h
src/: client.c  main.c  sendRecv.c  server.c  table.c
src/client/: client.c  comHandler.c
src/server/: comHandler.c  server.c
src/server/business/: tableBusiness.c  userBusiness.c  validateBusiness.c
src/server/data/: genericData.c  sessionData.c  table.c  table2userData.c  tableData.c  userData.c  utilsData.c
src/server/handlers/: commonHandler.c  tableHandler.c  userHandler.c
